Add NDK r11c and r12b Link

--- a/index.html
+++ b/index.html
@@ -1466,6 +1466,73 @@
                             </tr>
                         </thead>
                         <tbody>
+                        <tr>
+                            <td rowspan="4">NDK r12b</td>
+                              <td>Windows 32-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1jI0LcyE">android-ndk-r12b-windows-x86.zip</a>
+                              </td>
+                              <td>706453972</td>
+                              <td>8e6eef0091dac2f3c7a1ecbb7070d4fa22212c04</td>
+                              <td rowspan="4"><a href=""></a></td>
+                            </tr>
+                            <tr>
+                              <td>Windows 64-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1jI0LcyE">android-ndk-r12b-windows-x86_64.zip</a>
+                              </td>
+                              <td>749567353</td>
+                              <td>337746d8579a1c65e8a69bf9cbdc9849bcacf7f5</td>
+                            </tr>
+                            <tr><td>Mac OS X 64-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1jI0LcyE">android-ndk-r12b-darwin-x86_64.zip</a>
+                              </td>
+                              <td>734135279</td>
+                              <td>e257fe12f8947be9f79c10c3fffe87fb9406118a</td>
+                            </tr>
+                            <tr>
+                              <td>Linux 64-bit (x86)</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1jI0LcyE">android-ndk-r12b-linux-x86_64.zip</a>
+                              </td>
+                              <td>755551010</td>
+                              <td>170a119bfa0f0ce5dc932405eaa3a7cc61b27694</td>
+                            </tr>
+
+                            <tr>
+                              <td rowspan="4">NDK r11c</td>
+                              <td>Windows 32-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1hswLr2s">android-ndk-r11c-windows-x86.zip</a>
+                              </td>
+                              <td></td>
+                              <td></td>
+                              <td rowspan="4"><a href=""></a></td>
+                            </tr>
+                            <tr>
+                              <td>Windows 64-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1hswLr2s">android-ndk-r11c-windows-x86_64.zip</a>
+                              </td>
+                              <td></td>
+                              <td></td>
+                            </tr>
+                            <tr><td>Mac OS X 64-bit</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1hswLr2s">android-ndk-r11c-darwin-x86_64.zip</a>
+                              </td>
+                              <td></td>
+                              <td></td>
+                            </tr>
+                            <tr>
+                              <td>Linux 64-bit (x86)</td>
+                              <td align="left">
+                                <a href="http://pan.baidu.com/s/1hswLr2s">android-ndk-r11c-linux-x86_64.zip</a>
+                              </td>
+                              <td></td>
+                              <td></td>
+                            </tr>
 							<tr>
 							  <td rowspan="4">NDK r11b</td>
 							  <td>Windows 32-bit</td>
