--- a/index.html
+++ b/index.html
@@ -373,6 +373,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2 Preview6 -->
+                            <tr>
+                                <td rowspan="4">2.2 Preview6</td>
+                            </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1hrKlMLm">android-studio-ide-145.3070098-windows.zip</a></td>
+                              <td>449.3 MB</td>
+                              <td></td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469jw1f60fnhnzskj20or0i8ahg.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1hrKlMLm">android-studio-ide-145.3070098-mac.zip</a>
+                              </td>
+                              <td>449.8 MB</td>
+                              <td></td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1hrKlMLm">android-studio-ide-145.3070098-linux.zip</a>
+                              </td>
+                              <td>448.9 MB</td>
+                              <td></td>
+                            </tr>
                             <!-- 2.2 Preview5 -->
                             <tr>
                               <td rowspan="4">2.2 Preview5</td>
