add gityuan.com friend link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -220,8 +220,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://diycode.cc" target="_blank" title="DiyCode是一个优雅、极客、创意、分享、美好的开发社区">
-                                <img src="http://ww2.sinaimg.cn/mw690/6ff56379jw1f339yb3a5oj203m01sweb.jpg" />
+                            <a href="http://gityuan.com" target="_blank" title="Android 系统工程师，专注于 Android 最新源码的架构分析">
+                                <img src="http://ww3.sinaimg.cn/large/8a41f469jw1f62jpc97ujj203m01sq2q.jpg" />
                             </a>
                         </li>
 	                </ul>
