Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1494,6 +1494,16 @@
                                 <td>¥10</td>
                                 <td></td>
                                 <td>¥5</td>
+                                <td>17</td>
+                                <td>¥2.2</td>
+                                <td>Jay</td>
+                                <td>¥1</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>¥10</td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
