Added Android Studio 2.2 Preivew7 link

--- a/index.html
+++ b/index.html
@@ -373,6 +373,29 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2 Preview7 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview7</td>
+                            </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-windows.zip</a></td>
+                              <td>457.4 MB</td>
+                              <td>e6ea4c9d9bf4ae46dbea82e3cc5638fd93194c33</td>
+                              <td rowspan="4"><a href="">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-mac.zip</a></td>
+                              <td>457.9 MB</td>
+                              <td>56327a0f97d999a6b7a15f3e9e513aa42881c989</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-linux.zip</a></td>
+                              <td>447.1 MB</td>
+                              <td>b85c4e27401f7f18af19e39e453cca8575041dbb</td>
+                            </tr>
                             <!-- 2.2 Preview6 -->
                             <tr>
                                 <td rowspan="4">2.2 Preview6</td>
@@ -1522,7 +1545,9 @@
                             <tr>
                               <td>Linux 64-bit (x86)</td>
                               <td align="left">
-                                <a href="http://pan.baidu.com/s/1dE4JKMt">android-ndk-r12b-linux-x86_64.zip</a>
+                                <a href="http://pan.baidu.com/s/1dE4JKMt
+
+                                ">android-ndk-r12b-linux-x86_64.zip</a>
                               </td>
                               <td>755551010</td>
                               <td>170a119bfa0f0ce5dc932405eaa3a7cc61b27694</td>
@@ -4481,6 +4506,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
