Added Android Studio 2.2 Preivew7 SHA-1 code image link

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                               <td align="left"><a href="http://pan.baidu.com/s/1bpwq9vL">android-studio-ide-145.3111935-windows.zip</a></td>
                               <td>457.4 MB</td>
                               <td>e6ea4c9d9bf4ae46dbea82e3cc5638fd93194c33</td>
-                              <td rowspan="4"><a href="">查看</a></td>
+                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f6iopbz2e6j20rm0i0ahj.jpg">查看</a></td>
                             </tr>
                             <tr>
                               <td><nobr>Mac OS X</nobr></td>
