Added donate info

--- a/donate.html
+++ b/donate.html
@@ -1512,10 +1512,10 @@
                             <tr>
                                 <td></td>
                                 <td>¥4.99</td>
+                                <td>红军二百五</td>
+                                <td>¥10.24</td>
                                 <td></td>
-                                <td>¥</td>
-                                <td></td>
-                                <td>¥</td>
+                                <td>¥9.9</td>
                                 <td></td>
                                 <td>¥</td>
                             </tr>
