add donate alert info

--- a/donate.html
+++ b/donate.html
@@ -159,6 +159,10 @@
                     <h1 class="content-title">捐赠</h1>
                     <p>非常感谢您考虑对本站进行捐赠。支持把本站做的更好，帮助更多的人，<strong>金额随意。</strong>为了感谢您的捐赠，捐赠后记得在底部留言板留下你的<strong>昵称(如果不想显示真实姓名)</strong>、<strong>金额</strong>，以及博客、<strong>Github</strong>、<strong>Twitter</strong>、<strong>微博</strong> 等任何可以在社交网络上找到你的链接以便将您的信息添加到捐赠列表。🙏
                     </p>
+                    <br/>
+                    <blockquote style="color: gray">
+                    <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，不然在捐赠列表里只能显示捐赠金额！！！
+                    </blockquote>
                 </div>
                 <div class="donate-method-qr">
                      <h4 class="donate-method-title" align="center" style="padding: 0;">支付宝</h4>
@@ -1514,9 +1518,9 @@
                                 <td>¥4.99</td>
                                 <td>红军二百五</td>
                                 <td>¥10.24</td>
-                                <td></td>
+                                <td>yiyi诚</td>
                                 <td>¥9.9</td>
-                                <td></td>
+                                <td>潜龙勿用</td>
                                 <td>¥5</td>
                             </tr>
                             <tr>
